welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:10: error: ';' expected but 'if' found.
	}if ( c == 5){
         ^